[gd_scene load_steps=2 format=3 uid="uid://dbyk0eoblfaq"]

[ext_resource type="Script" path="res://UI/SettingsPanel/SettingsPanel.gd" id="1_emjwp"]

[node name="SettingsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_emjwp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 172.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select Camera Control"

[node name="CameraControlOptions" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[connection signal="item_selected" from="VBoxContainer/CameraControlOptions" to="." method="_on_camera_control_options_item_selected"]
